# scale-ms

./: .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements-gmxapi.txt  requirements-testing.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: resource_local.json  tests.yml
ci_scripts/: install_gromacs_branch.sh
docker/: README.md  compose.yml  docker-compose.yml  prep-venv.sh  radicalpilot.dockerfile  resource_docker.json  resource_local.json  rp-complete.dockerfile  scalems-gromacs.dockerfile  scalems-lammps.dockerfile  scalems-rp.dockerfile  stack.yml
docs/: applications.rst  applications_general.py  conf.py  data.rst  dataflow.rst  developer.rst  executor.rst  executor_radical.rst  glossary.rst  gmxapi.rst  index.rst  install.rst  invocation.rst  operations.rst  python.rst  requirements.in  requirements.txt  runtime.rst  samples.rst  serialization.rst  specifications.rst  srs.rst  testing.rst  usage.rst  usecase.rst  userguide.rst  workspec_schema_0_2.rst
docs/applications/: asynchronous_adaptive_msm.rst  parallel_adaptive_msm.rst
docs/design/: applications.rst  index.rst  localization.rst  operations.rst  serialization.rst  usage.rst  usecase.rst
docs/design/applications/: asynchronous_adaptive_msm.rst  parallel_adaptive_msm.rst
docs/design/diagrams/: client_context_sequence.puml  datamodel_instance.puml  runtime_deferred_sequence.puml
docs/diagrams/: application_user_interaction.puml  architectural_deployment.puml  architectural_roles.puml  client_execution.puml  datamodel_class.puml  key.puml  runtime_checkpoint_usecase.puml  runtime_immediate_sequence.puml  runtime_interface_sequence.puml  script_interaction.puml  simple_executor_interaction.puml  simple_operation_client_sequence.puml  simple_operation_execution_sequence.puml
docs/diagrams/radical/: raptor_protocol_sequence.puml  rp_launch_sequence.puml
docs/diagrams/raptor/: raptor_protocol_sequence.puml
docs/diagrams/workflow_staging/: runtime_interface_sequence.puml  subprocess_graph_workflow_instance.puml  subprocess_hierarchical_workflow_instance.puml  subprocess_simple_workflow_instance.puml  subprocesstypes_instance.puml
docs/srs/: appendix.rst  changes.rst  glossary.rst  intro.rst  requirements.rst
examples/async_adaptive_msm/: async_iteration.py  async_queue.py  msmtool.py  unordered_mapping.py  workflow_input.py
examples/asynch_adaptive_msm/: async_iteration.py  async_queue.py  unordered_mapping.py  workflow_input.py
examples/basic/: Dockerfile  README.md  echo.py  echo_detail.py
examples/basic_gmxapi/: Dockerfile  README.md  single_sim.py
examples/basic_pipeline/: echo-pipeline.py
examples/brer/: brer.py
examples/gromacs/async_adaptive_msm/: async_iteration.py  unordered_mapping.py
examples/hyperdynamics_lammps/lammps_inputs/: hyperdynamics.in
examples/lammps/hyperdynamics_lammps/: workflow.py
examples/lammps/simple_lammps/: README.md  single_sim.py  test_trajectory_continuer.py  trajectory_continuer.py  workflow.py
examples/lammps_files/simple_lammps/: commands.lammps  lammps_from_pythom.py  lammps_from_python.py  lammps_from_python_parallel.py  lj_bulk.dcd  lj_bulk.xyz  log.lammps  single_sim.py  test_trajectory_continuer.py  workflow.py
examples/parallel_adaptive_msm/: analyze.py  gromacsmd.py  workflow.py
examples/parallel_adaptive_msm/wrappers/: __init__.py  gromacs.py
examples/restrained_ensemble/: re.py
examples/rp_basic_ensemble/: _simulation.py  rp_basic_ensemble.py
examples/simple/: simple_demo.py
examples/simple_lammps/: trajectory_continuer.py  workflow.py
examples/simple_lammps/lammps_inputs/: lj_bulk.input  lj_bulk.lmp
notebooks/: concrete_graph.ipynb  work_records.ipynb
protos/scalems/_grpc/: runtime.proto
scalems/: __init__.py  subprocess.py
scalems/_grpc/: __init__.py  operations_pb2_grpc.py  runtime_pb2.py  runtime_pb2_grpc.py
scalems/context/: __init__.py
scalems/local/: __init__.py  __main__.py  operations.py
scalems/radical/: __init__.py  __main__.py
scalems/worker/: __init__.py  __main__.py
scalems/wrappers/: __init__.py
scripts/: applications_general.py  pyemma_msm.py
serialization/: __init__.py
src/: gromacs_wrapper.py  lammps_wrapper.py
src/scalems/: __init__.py  _object.py  _types.py  _version.py  commands.py  compat.py  cpi.py  dispatching.py  exceptions.py  execution.py  identifiers.py  invocation.py  logger.py  messages.py  py.typed  serialization.py  subprocess.py  unique.py  utility.py  workflow.py
src/scalems/_types/: __init__.py
src/scalems/call/: __init__.py  __main__.py
src/scalems/context/: __init__.py  _datastore.py  _file.py  _lock.py
src/scalems/core/: __init__.py  exceptions.py
src/scalems/encoding/: __init__.py  _object.py  _record.py  _type.py
src/scalems/file/: __init__.py
src/scalems/local/: __init__.py  __main__.py  operations.py
src/scalems/local_immediate/: __init__.py  __main__.py  operations.py
src/scalems/mpi/: __init__.py
src/scalems/radical/: __init__.py  __main__.py  _common.py  common.py  configuration.py  exceptions.py  executor.py  manager.py  operations.py  raptor.py  runtime.py  runtime_configuration.py  scalems_rp_agent.py  scalems_rp_master.py  scalems_rp_worker.py  session.py  task.py
src/scalems/rp/: __init__.py  __main__.py  runtime.py
src/scalems/simple/: __init__.py
src/scalems/store/: __init__.py  _lock.py
src/scalems/subprocess/: __init__.py  (+1 more)
test/: test_arrays.py
tests/: conftest.py  pytest.ini  scalems_test_cfg.json  scalems_test_master.py  scalems_test_tmp.py  scalems_test_worker.py  test_arrays.py  test_call.py  test_context_datastore.py  test_datamodel.py  test_filereference.py  test_invocation.py  test_messages.py  test_radical_runtime.py  test_raptor_utilities.py  test_record.py  test_rp_basic.py  test_rp_exec.py  test_rp_future.py  test_rp_staging.py  test_rp_venv.py  test_rpc.py  test_subprocess_exec.py
tests/scalems_work/: work.0000.json  work.0001.json  work.0002.json  work.0003.json  work.0004.json
(+38 files in other folders)
