[metadata]
name = scalems
version = attr: scalems.__version__
description = Reference implementation of the SCALE-MS data flow scripting and graph execution API for molecular science computational research protocols.
url = https://github.com/SCALE-MS/scale-ms/
author = SCALE-MS team
author_email = info@scalems.org
;long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
;keywords = one, two
;license = BSD 3-Clause License
;classifiers =
;    Framework :: Django
;    License :: OSI Approved :: BSD License
;    Programming Language :: Python :: 3
;    Programming Language :: Python :: 3.5

[options]
python_requires = >=3.8
zip_safe = True
packages = find:
package_dir =
    =src
install_requires =
    packaging
    radical.pilot>=1.6.6
tests_require =
    build
    packaging
    pytest>=6.1.2
    pytest-asyncio>=0.14
    pytest-env
    radical.pilot>=1.6.6

[options.entry_points]
console_scripts =
    scalems_rp_master=scalems.radical.scalems_rp_master:main
    scalems_rp_worker=scalems.radical.scalems_rp_worker:main

[options.package_data]
scalems = py.typed, radical/data/*.json'

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/scalems/_version.py
versionfile_build = scalems/_version.py
tag_prefix = scalems-
parentdir_prefix = scalems-
