[metadata]
name = scalems
version = attr: scalems.__version__
description = Reference implementation of the SCALE-MS data flow scripting and graph execution API for molecular science computational research protocols.
url = https://github.com/SCALE-MS/scale-ms/
author = SCALE-MS team
author_email = info@scalems.org
;long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
;keywords = one, two
;license = BSD 3-Clause License
;classifiers =
;    Framework :: Django
;    License :: OSI Approved :: BSD License
;    Programming Language :: Python :: 3
;    Programming Language :: Python :: 3.5

[options]
python_requires = >=3.8
; Note that we also hard code some Python version checking in setup.py.
zip_safe = True
packages = find:
package_dir =
    =src
install_requires =
    packaging
    radical.pilot>=1.14.0
tests_require =
    build
    packaging
    pytest>=6.1.2
    pytest-asyncio>=0.14
    pytest-env
    radical.pilot>=1.14.0

[options.entry_points]
console_scripts =
    scalems_rp_master=scalems.radical.raptor:master
;The full paths for generated scripts used during package installation is not trivially calculable or inspectable,
;and depends on the tools used to manage the packaging and (virtual) environment.
;But it should be safe to assume that the script can be found on the
;PATH available to the same Python interpreter (and its subprocesses) that was able
;to import the scalems package.
;
;The actual path of the generated entry point script depends on the installation
;mechanism and interpreter environment, but should be in one of the directories given by
;
;    sysconfig.get_paths(scheme)['scripts'] for scheme in sysconfig.get_scheme_names()
;
;For example code to track down the install location (narrowing down the 'scheme'),
;consider the rabbit hole beginning at
; https://github.com/pypa/pip/blob/c928d89647ba6a5ff69ccb274991b4c64ea98b6a/src/pip/_internal/req/req_uninstall.py#L562

[options.package_data]
scalems = py.typed

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/scalems/_version.py
versionfile_build = scalems/_version.py
tag_prefix = scalems-
parentdir_prefix = scalems-
